[gd_scene load_steps=20 format=3 uid="uid://baah3mg4ujl0h"]

[ext_resource type="Script" path="res://Scripts/TestMap.gd" id="1_mxvjw"]
[ext_resource type="PackedScene" uid="uid://jhq551w5f08n" path="res://Score.tscn" id="2_iw6y6"]
[ext_resource type="PackedScene" uid="uid://ds7p1fq6828rv" path="res://Scenes/crowns_text.tscn" id="3_hbee3"]
[ext_resource type="Texture2D" uid="uid://im2jnku2yl65" path="res://Assets/TempTile.png" id="4_rk4yg"]
[ext_resource type="Texture2D" uid="uid://dajhjtsjq7lgc" path="res://Assets/Temp1Building.png" id="5_4q241"]
[ext_resource type="Texture2D" uid="uid://dp210wk8ovjy" path="res://Assets/Temp2Building.png" id="6_1y15l"]
[ext_resource type="Texture2D" uid="uid://cg6xa1ki4ck7p" path="res://Assets/Temp2SpreadBuilding.png" id="7_winfg"]
[ext_resource type="Script" path="res://Scripts/TileMap.gd" id="8_q5vgq"]
[ext_resource type="PackedScene" uid="uid://sy8hclu60op2" path="res://Scenes/trash_can.tscn" id="9_dhni6"]
[ext_resource type="PackedScene" uid="uid://da0qxpfj2dunu" path="res://NPC.tscn" id="10_ajhbt"]
[ext_resource type="Script" path="res://switch_text.gd" id="11_7auj3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dxd0g"]
texture = ExtResource("4_rk4yg")
texture_region_size = Vector2i(300, 260)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ixivy"]
texture = ExtResource("5_4q241")
texture_region_size = Vector2i(1940, 1750)
0:0/0 = 0
0:0/0/y_sort_origin = -150
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-9.89954, -356.382, -394.566, -147.078, 4.24268, 65.0538, 383.252, -147.078)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rp8ga"]
texture = ExtResource("6_1y15l")
texture_region_size = Vector2i(1940, 1750)
0:0/0 = 0
0:0/0/y_sort_origin = -150
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-49.4976, -401.637, -926.31, 147.078, -555.786, 367.696, 321.026, -132.936)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ch6db"]
texture = ExtResource("7_winfg")
texture_region_size = Vector2i(1940, 1750)
0:0/0 = 0
0:0/0/y_sort_origin = -150
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-43.8407, -415.779, -977.222, 175.362, -584.07, 384.666, 371.938, -149.907)

[sub_resource type="TileSet" id="TileSet_4etrk"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(1900, 1100)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_dxd0g")
sources/1 = SubResource("TileSetAtlasSource_ixivy")
sources/2 = SubResource("TileSetAtlasSource_rp8ga")
sources/3 = SubResource("TileSetAtlasSource_ch6db")

[sub_resource type="Curve2D" id="Curve2D_h36h6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1403, 2013, 0, 0, 0, 0, 2273, 1505, 0, 0, 0, 0, 2695, 1770, 0, 0, 0, 0, 2380, 1983, 0, 0, 0, 0, 2850, 2271, 0, 0, 0, 0, 3691, 1787, 0, 0, 0, 0, 4134, 2080, 0, 0, 0, 0, 4304, 1985, 0, 0, 0, 0, 3851, 1697)
}
point_count = 9

[sub_resource type="Curve2D" id="Curve2D_1v3vp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 3224, 950, 0, 0, 0, 0, 2849, 1172, 0, 0, 0, 0, 2453, 948, 0, 0, 0, 0, 2000, 1207, 0, 0, 0, 0, 2355, 1434, 0, 0, 0, 0, 1917, 1721, 0, 0, 0, 0, 2839, 2261, 0, 0, 0, 0, 4179, 1510)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_ltemh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 4177, 1505, 0, 0, 0, 0, 2854, 2276, 0, 0, 0, 0, 1915, 1718, 0, 0, 0, 0, 3227, 954, 0, 0, 0, 0, 2849, 1171, 0, 0, 0, 0, 2466, 941)
}
point_count = 6

[node name="TestMap" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_mxvjw")

[node name="Control" parent="." instance=ExtResource("2_iw6y6")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 2880.0
offset_right = 2880.0
grow_horizontal = 1
grow_vertical = 1
metadata/_edit_use_anchors_ = true

[node name="CrownsText" parent="." instance=ExtResource("3_hbee3")]

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(2.08165e-12, 500)
tile_set = SubResource("TileSet_4etrk")
rendering_quadrant_size = 1
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-65535, 1, 0, 1, 3, 0, 2, 1, 0, -65534, 2, 0)
script = ExtResource("8_q5vgq")

[node name="TrashCan" parent="." instance=ExtResource("9_dhni6")]
position = Vector2(2211, 1523)

[node name="BobPath" type="Path2D" parent="."]
y_sort_enabled = true
position = Vector2(4.45093, 0)
scale = Vector2(0.998966, 1)
curve = SubResource("Curve2D_h36h6")
metadata/_edit_group_ = true

[node name="BobFollow" type="PathFollow2D" parent="BobPath"]
y_sort_enabled = true
position = Vector2(1403, 2013)
rotates = false
metadata/_edit_group_ = true

[node name="NPC_Bob" parent="BobPath/BobFollow" instance=ExtResource("10_ajhbt")]

[node name="FredPath" type="Path2D" parent="."]
y_sort_enabled = true
curve = SubResource("Curve2D_1v3vp")

[node name="FredFollow" type="PathFollow2D" parent="FredPath"]
position = Vector2(3224, 950)
rotates = false

[node name="NPC_Fred" parent="FredPath/FredFollow" instance=ExtResource("10_ajhbt")]

[node name="StacyPath" type="Path2D" parent="."]
y_sort_enabled = true
curve = SubResource("Curve2D_ltemh")

[node name="StacyFollow" type="PathFollow2D" parent="StacyPath"]
position = Vector2(4177, 1505)
rotates = false

[node name="NPC_Stacy" parent="StacyPath/StacyFollow" instance=ExtResource("10_ajhbt")]

[node name="google en passant" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 6.0
offset_top = 2499.0
offset_right = 5761.0
offset_bottom = 2697.0
color = Color(0.0705882, 0.0705882, 0.0705882, 0.666667)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 2420.0
offset_top = 2536.0
offset_right = 3382.0
offset_bottom = 2688.0
theme_override_font_sizes/normal_font_size = 70
script = ExtResource("11_7auj3")

[editable path="TrashCan"]
